fix: fix comps button visible when tab change

--- a/engine-ui/packages/console-ui/src/styles/views/clusterManage.scss
+++ b/engine-ui/packages/console-ui/src/styles/views/clusterManage.scss
@@ -186,7 +186,7 @@
     position: relative;
     padding: 12px 20px 20px 20px;
     .c-editCluster__header {
-        margin-bottom: 12px;
+        margin-bottom: 20px;
         height: 32px;
         display: flex;
         justify-content: space-between;
@@ -204,7 +204,7 @@
 .c-editCluster__container {
     position: absolute;
     background: #fff;
-    top: 52px;
+    top: 64px;
     bottom: 20px;
     left: 20px;
     right: 20px;
@@ -484,8 +484,8 @@
 
 // new 
 .c-fileConfig__container {
-    width: 200px;
-    padding: 20px 12px;
+    width: 210px;
+    padding: 20px 17px;
     position: absolute;
     top: 0;
     bottom: 40px;
@@ -513,10 +513,10 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        font-size: 12px;
         line-height: 20px;
         position: relative;
-        color: #3F87FF;
+        font-size: 12px;
+        color: rgb(51, 51, 51);
         .anticon-delete, .anticon-paper-clip, .anticon-edit, .anticon-download {
             position: absolute;
             top: 4px;
